# s3-server

./: .drone.yml  Cargo.toml  Dockerfile
src/: errors.rs  lib.rs  service.rs  signature_v4.rs
src/storages/: fs.rs
src/streams/: multipart.rs
