[package]
name = "s3-server"
version = "0.2.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/datenlord/s3-server"
readme = "README.md"
description = "An experimental generic S3 server"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
rust-version = "1.65"

[features]
default = ["binary"]
binary = [
    "anyhow", 
    "dotenv", 
    "structopt", 
    "tokio", 
    "tracing-subscriber"
]

[[bin]]
name = "s3-server"
required-features = ["binary"]

[dependencies]
anyhow = { version = "1.0.66", optional = true }
async-fs = "1.6.0"
async-trait = "0.1.59"
backtrace = "0.3.66"
base64 = "0.13.1"
chrono = "0.4.23"
const-str = { version = "0.5.3", features = ["regex"] }
dotenv = { version = "0.15.0", optional = true }
futures = "0.3.25"
hex-simd = "0.7.0"
hmac = "0.12.1"
http = "0.2.8"
httparse = "1.8.0"
hyper = { version = "0.14.23", features = ["server"] }
md-5 = "0.10.5"
memchr = "2.5.0"
mime = "0.3.16"
nom = "7.1.1"
once_cell = "1.16.0"
path-absolutize = "3.0.14"
pin-project-lite = "0.2.9"
quick-xml = { version = "0.26.0", features = ["serialize"] }
regex = "1.7.0"
rusoto_core = {version = "0.48.0", default-features = false, features = ["rustls"] }
rusoto_s3 = {version="0.48.0",default-features = false, features= ["rustls"] }
serde = "1.0.149"
serde_json = "1.0.89"
serde_urlencoded = "0.7.1"
sha2 = "0.10.6"
smallvec = "1.10.0"
structopt = { version = "0.3.26", optional = true }
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"], optional = true }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.16", optional = true, features = ["env-filter", "time"] }
transform-stream = "0.2.0"
urlencoding = "2.1.2"
uuid = { version = "1.2.2", features = ["v4"] }
xml-rs = "0.8.4"

[dev-dependencies]
tokio = { version = "1.22.0", features = ["full"] }
